add the landing page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delani Studio</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     
+<body>
+    <div id="landingpage">
+        <img src="images/logo/logo.png" alt="logo" id="logo">
+        <h1>Welcome To</h1>
+        <h1>Delani Studio</h1>
+        <p>Amazing people are making amazing designs in a fun enviroment</p>
+        <img src="images/mouse_click.png" alt="mouse_click" id="mouse">
+    </div>
 
     
 </body>
