--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <title>Delani Studio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    
+    <script src="js/jquery-3.5.1.js"></script>
+</head>   
 <body>
-    <div id="landingpage">
+    <div class="landing-page">
         <img src="images/logo/logo.png" alt="logo" id="logo">
         <h1>Welcome To</h1>
         <h1>Delani Studio</h1>
         <p>Amazing people are making amazing designs in a fun enviroment</p>
         <img src="images/mouse_click.png" alt="mouse_click" id="mouse">
     </div>
+    <div class="container" id="about_us">
+        <h2>About Us</h2>
+        <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development
+          process are intergrated, interactive and agile.</p>
+        <p>Our approach unifies design, development and product management: to create exceptional products.</p>
+        <p>We start each project by understanding your business goals, the user's needs and the product requirements</p>
+        <p>Then we help translate them into effective and elegant solutions</p>
+    </div>
+
 
     
 </body>
