--- a/index.html
+++ b/index.html
@@ -25,14 +25,108 @@
         <p>Then we help translate them into effective and elegant solutions</p>
     </div>
     <div id="services">
-        <div class="overlay pb-5">
           <h2>SERVICES</h2>
           <p>Before we sign a contract or write a line of code, our team will spend the time need to understand your product
             vision.</p>
           <p>The outcome of this scoping session is proposal or high level statement of work.</p>
           <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
-        </div>
     </div>
+    <div class="container text-center" id="what-do">
+        <h2 class="text-center">what we do</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <figure id="design">
+              <img src="images/services_icons/design_icon.png" alt="design">
+              <figcaption>DESIGN</figcaption>
+            </figure>
+            <div id="design-hide">
+              <h5>DESIGN</h5>
+              <p>Our design practice offers a full range of services including brand strategy, interaction and visual design
+                and user experience testing.<br>
+                Throughout your project, our designers create and implement visual design and workflows, solicit user
+                feedback and work with you to make sure what gets built is what is needed.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <figure id="dev">
+              <img src="images/services_icons/dev_icon.png" alt="Development">
+              <figcaption>DEVELOPMENT</figcaption>
+            </figure>
+            <div id="dev-hide">
+              <h5>DEVELOPMENT</h5>
+              <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.<br>
+                They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
+                test-driven development and pair programming.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <figure id="prod">
+              <img src="images/services_icons/product_icon.png" alt="Product management">
+              <figcaption>PRODUCT MANAGEMENT</figcaption>
+            </figure>
+            <div id="prod-hide">
+              <h5>PRODUCT MANAGEMENT</h5>
+              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build
+                are always ready to go live.<br>
+                This iterative process allows for changes as business requirements evolve.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work4.jpg" alt="work4">
+            <div class="image-caption">
+              <p class="text-center">Dark Nation</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work3.jpg" alt="work3">
+            <div class="image-caption">
+              <p class="text-center">Mighty Ontorio</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work2.jpg" alt="work2">
+            <div class="image-caption">
+              <p class="text-center">Dice Game</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work1.jpg" alt="work1">
+            <div class="image-caption">
+              <p class="text-center">Jim Carrey</p>
+            </div>
+          </div>
+        </div>
+        <div class="row pt-4 pb-4">
+          <div class="image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work5.jpg" alt="work5">
+            <div class="image-caption">
+              <p class="text-center">Travel Agency</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work6.jpg" alt="work6">
+            <div class="image-caption">
+              <p class="text-center">Calculator</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work7.jpg" alt="work7">
+            <div class="image-caption">
+              <p class="text-center">Logo Mock-Up</p>
+            </div>
+          </div>
+          <div class=" image-frame col-md-3">
+            <img class="w-100" src="images/portfolio/work8.jpg" alt="work8">
+            <div class="image-caption">
+              <p class="text-center">Bailey Wanger</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     
