--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
       <div class="container">
         <div class="row">
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work4.jpg" alt="work4">
+            <img class="w-100" src="images/portfolio/work4.jpg">
             <div class="image-caption">
               <p class="text-center">Dark Nation</p>
             </div>
           </div>
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work3.jpg" alt="work3">
+            <img class="w-100" src="images/portfolio/work3.jpg">
             <div class="image-caption">
               <p class="text-center">Mighty Ontorio</p>
             </div>
           </div>
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work2.jpg" alt="work2">
+            <img class="w-100" src="images/portfolio/work2.jpg">
             <div class="image-caption">
               <p class="text-center">Dice Game</p>
             </div>
           </div>
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work1.jpg" alt="work1">
+            <img class="w-100" src="images/portfolio/work1.jpg">
             <div class="image-caption">
               <p class="text-center">Jim Carrey</p>
             </div>
@@ -102,19 +102,19 @@
         </div>
         <div class="row pt-4 pb-4">
           <div class="image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work5.jpg" alt="work5">
+            <img class="w-100" src="images/portfolio/work5.jpg">
             <div class="image-caption">
               <p class="text-center">Travel Agency</p>
             </div>
           </div>
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work6.jpg" alt="work6">
+            <img class="w-100" src="images/portfolio/work6.jpg">
             <div class="image-caption">
               <p class="text-center">Calculator</p>
             </div>
           </div>
           <div class=" image-frame col-md-3">
-            <img class="w-100" src="images/portfolio/work7.jpg" alt="work7">
+            <img class="w-100" src="images/portfolio/work7.jpg">
             <div class="image-caption">
               <p class="text-center">Logo Mock-Up</p>
             </div>
@@ -127,7 +127,30 @@
           </div>
         </div>
       </div>
-
+      <div class=" container-fluid text-center" id="contact-us">
+        <h2>CONTACT US</h2>
+        <form class="form-group forms" id="forms" method="POST">
+          <div class="row">
+            <input type="text" id="name" class="bgTransparent col" placeholder="Name..">
+            <input type="email" id="email" class="bgTransparent col" placeholder="Email..">
+          </div>
+          <textarea id="textarea" class="bgTransparent" placeholder="Your message here.." rows="8"></textarea>
+          <div>
+            <input type="submit" class="btn btn-secondary">
+          </div>
+        </form>
+      </div>
+      <div class="text-center pb-3 pt-3" id="social-media">
+        <img src="images/social_icons/twitter.png" alt="for twitter" class="social-media">
+        <img src="images/social_icons/dribble.png" alt="for dribble" class="social-media">
+        <img src="images/social_icons/facebook.png" alt="for facebook" class="social-media">
+        <img src="images/social_icons/g_plus.png" alt="for google" class="social-media">
+        <img src="images/social_icons/skype.png" alt="for skype" class="social-media">
+        <img src="images/social_icons/stumble_upon.png" alt="for stumble_upon" class="social-media">
+        <img src="images/social_icons/flickr.png" alt="for flickr" class="social-media">
+        <img src="images/social_icons/behance.png" alt="for behance" class="social-media">
+        <img src="images/social_icons/pinterest.png" alt="for pinterest" class="social-media">
+      </div>
 
     
 </body>
