link js file to html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
+
 </head>   
 <body>
+ <div class="box_model">
     <div class="landing-page">
         <img src="images/logo/logo.png" alt="logo" id="logo">
         <h1>Welcome To</h1>
@@ -34,12 +37,12 @@
     <div class="container text-center" id="what-do">
         <h2 class="text-center">what we do</h2>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-5">
             <figure id="design">
               <img src="images/services_icons/design_icon.png" alt="design">
               <figcaption>DESIGN</figcaption>
             </figure>
-            <div id="design-hide">
+            <div id="hide-design">
               <h5>DESIGN</h5>
               <p>Our design practice offers a full range of services including brand strategy, interaction and visual design
                 and user experience testing.<br>
@@ -129,7 +132,7 @@
       </div>
       <div class=" container-fluid text-center" id="contact-us">
         <h2>CONTACT US</h2>
-        <form class="form-group forms" id="forms" method="POST">
+        <form class="form-group forms">
           <div class="row">
             <input type="text" id="name" class="bgTransparent col" placeholder="Name..">
             <input type="email" id="email" class="bgTransparent col" placeholder="Email..">
@@ -151,6 +154,7 @@
         <img src="images/social_icons/behance.png" alt="for behance" class="social-media">
         <img src="images/social_icons/pinterest.png" alt="for pinterest" class="social-media">
       </div>
+ </div>
 
     
 </body>
