create function on js script to hide toggle 'what we do'functions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class="text-center">what we do</h2>
         <div class="row">
           <div class="col-md-5">
-            <figure id="design">
+            <figure id="hide">
               <img src="images/services_icons/design_icon.png" alt="design">
               <figcaption>DESIGN</figcaption>
             </figure>
@@ -51,11 +51,11 @@
             </div>
           </div>
           <div class="col-md-4">
-            <figure id="dev">
+            <figure id="development">
               <img src="images/services_icons/dev_icon.png" alt="Development">
               <figcaption>DEVELOPMENT</figcaption>
             </figure>
-            <div id="dev-hide">
+            <div id="hide-development">
               <h5>DEVELOPMENT</h5>
               <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.<br>
                 They collaborate with your team to write, and improve code on a daily basis, using proven practices such as
