toggel products in what we do section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-5">
             <figure id="development">
               <img src="images/services_icons/dev_icon.png" alt="Development">
               <figcaption>DEVELOPMENT</figcaption>
@@ -62,12 +62,12 @@
                 test-driven development and pair programming.</p>
             </div>
           </div>
-          <div class="col-md-4">
-            <figure id="prod">
+          <div class="col-md-5">
+            <figure id="products">
               <img src="images/services_icons/product_icon.png" alt="Product management">
               <figcaption>PRODUCT MANAGEMENT</figcaption>
             </figure>
-            <div id="prod-hide">
+            <div id="hide-products">
               <h5>PRODUCT MANAGEMENT</h5>
               <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build
                 are always ready to go live.<br>
